# convcommits

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: convcommits.yml  workspace.yml
crates/convcommits/: CHANGELOG.md  Cargo.toml  README.md
crates/convcommits-tests/: Cargo.toml
crates/convcommits-tests/src/: lib.rs
crates/convcommits-tests/src/snapshots/: convcommits_tests__tests__parse_commit_msgs@empty.txt.snap  convcommits_tests__tests__parse_commit_msgs@feat-body.txt.snap  convcommits_tests__tests__parse_commit_msgs@feat-desc.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body-bullet-list.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body-footer-one-line.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body-github-footer.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body-multiple-footers.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body-multiple-lines.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body-with-ty-desc.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-body.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-bullet-body.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-footer-one-line.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-github-fix-issue-footer.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-github-footer-multiple-lines.txt.snap  convcommits_tests__tests__parse_commit_msgs@ty-desc-github-footer.txt.snap  (+6 more)
crates/convcommits/src/: lib.rs
(+18 files in other folders)
