[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.dependencies]
convcommits = { version = "0.1.0", path = "crates/convcommits/" }
insta = { version = "1.42.2", features = ["glob", "serde", "yaml"] }
proptest = { version = "1.6.0" }
serde = { version = "1.0.219", features = ["derive"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3