[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "A Conventional Commits parser."
documentation = "https://docs.rs/convcommits/"
edition = "2024"
include = [
  "/src",
  "/tests",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
]
license = "MIT OR Apache-2.0"
name = "convcommits"
readme = "README.md"
repository = "https://github.com/bluk/convcommits"
rust-version = "1.85.0"
version = "0.1.0"

[dependencies]

[features]
default = ["std"]

std = []

alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
